--- a/app/src/main/res/layout/activity_set_app.xml
+++ b/app/src/main/res/layout/activity_set_app.xml
@@ -1,59 +1,71 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="@dimen/activity_vertical_margin" tools:context=".SetAppActivity">
-
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="@dimen/activity_vertical_margin"
+                tools:context=".SetAppActivity">
 
 
     <TextView
+        android:id="@+id/titleSetShortcut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textStyle="bold|italic"
+        android:layout_alignParentStart="true"
         android:text="@string/set_shortcut_title"
-        android:id="@+id/titleSetShortcut"
         android:textAlignment="center"
-        android:layout_alignParentStart="true" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textStyle="bold|italic"/>
 
     <Button
 
-        android:text="@string/set_shortcut_button"
-        android:layout_margin="15dp"
         android:id="@+id/chooseShortcut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:elevation="4dp"
-        android:textSize="20dp"
-        android:textColor="@color/accent"
-        android:padding="15dp"
-        android:onClick="chooseShortcut"
         android:layout_below="@id/titleSetShortcut"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="15dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:elevation="4dp"
+        android:onClick="chooseShortcut"
+        android:padding="15dp"
+        android:text="@string/set_shortcut_button"
+        android:textColor="@color/accent"
+        android:textSize="20dp"
         />
+
     <TextView
+        android:id="@+id/titleSetApp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/chooseShortcut"
+        android:layout_centerHorizontal="true"
+        android:text="@string/set_app_title"
+        android:textAlignment="center"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textStyle="bold|italic"
-        android:text="@string/set_app_title"
-        android:id="@+id/titleSetApp"
-        android:textAlignment="center"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/chooseShortcut"
         />
 
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/titleSetApp">
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:scrollbarStyle="outsideOverlay"
-        android:smoothScrollbar="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/titleSetApp"
-        />
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone"/>
 
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:scrollbarStyle="outsideOverlay"
+            android:smoothScrollbar="true"/>
+    </FrameLayout>
 
 
 </RelativeLayout>
