Added option for theme chooser Choose light or dark theme and change on the fly

--- a/app/src/main/res/menu/menu_set_app.xml
+++ b/app/src/main/res/menu/menu_set_app.xml
@@ -7,4 +7,11 @@
         android:showAsAction="always"
         android:icon="@drawable/ic_info"
         android:title="@string/action_settings" />
+
+    <item
+        android:id="@+id/action_theme"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:icon="@drawable/ic_theme"
+        android:title="Themes" />
 </menu>
