--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="AppTheme" parent="android:Theme.Material.Light.DarkActionBar">
         <item name="android:colorPrimary">@color/primary</item>
         <item name="android:colorPrimaryDark">@color/primary_dark</item>
@@ -7,9 +8,19 @@
         <item name="android:dividerHeight">0dp</item>
         <item name="android:listDivider">@null</item>
         <item name="android:divider">@null</item>
-
-
     </style>
+
+    <style name="AppThemeDark" parent="android:Theme.Material">
+        <item name="android:colorPrimary">@color/primary</item>
+        <item name="android:colorPrimaryDark">@color/primary_dark</item>
+        <item name="android:colorAccent">@color/accent</item>
+        <item name="android:dividerHeight">0dp</item>
+        <item name="android:listDivider">@null</item>
+        <item name="android:divider">@null</item>
+        <item name="android:colorBackground">#373737</item>
+        <item name="android:alertDialogTheme">@style/MyDialogTheme</item>
+    </style>
+
     <style name="Theme.Transparent" parent="android:Theme.Translucent.NoTitleBar">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
@@ -17,5 +28,10 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:backgroundDimEnabled">false</item>
+    </style>
+
+    <style name="MyDialogTheme" parent="android:Theme.Material.Dialog">
+        <item name="android:colorAccent">@color/accent</item>
+        <item name="android:colorBackground">#171717</item>
     </style>
 </resources>
