--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#202038</color>
-    <color name="primary_dark">#19192C</color>
+    <color name="primary">#193654</color>
+    <color name="primary_dark">#142B43</color>
     <color name="primary_light">#F8BBD0</color>
-    <color name="accent">#702030</color>
+    <color name="accent">#D63A14</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#727272</color>
     <color name="icons">#FFFFFF</color>
